--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to my blog</h1>
-    <h2>Today is a sunny day!</h2>
-    <h3>Maybe tomorrow will be a rainy day...</h3>
-    <h4>The day after probably windy</h4>
-    <p>How does a paragraph look like</p>
-    <a href="https://nea.gov.sg">Go to NEA website</a>
+    <h1 class="title">Welcome to my blog</h1>
+    <h3 class="title" id="important">Written by Preshant</h3>
+    <h3>Date: 6 May 2025</h3>
 </body>
 </html>
